# project2_Shevelev_Igor_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
data/: users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
src/primitive_db/data/: users.json
